# wolfie_rag

./: .dockerignore  .env.local  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  components.json  docker-compose.yml  package.json  pnpm-lock.yaml  setup.sh
rag/: .dockerignore  .env  ARCHITECTURE.md  Dockerfile  main.py  pyproject.toml
rag/app/: main.py
rag/app/api/v1/: __init__.py  ingestion.py  query.py
rag/app/core/: config.py  db.py
rag/app/models/: document.py
rag/app/schemas/: document.py
rag/app/services/: ingestion.py  rag.py
rag/data/: test.md
rag/data/source/: BS-Computer Application-Program-Info.docx  BS-Computer Science-2018-Semestral-Load.docx  BS-Computer Science-Program-Info.docx  BS-Information System-Program-Info.docx  BS-Information Technology-Program-Info.docx
rag/data/uploads/: 20251204_171405_new_watch_test_new_watch_test.txt
rag/postgres/: schema.sql
src/: appwrite.ts  proxy.ts
src/app/: layout.tsx  loading.tsx  page.tsx
src/app/dashboard/: layout.tsx  loading.tsx  page.tsx
src/app/dashboard/_components/: DashboardCard.tsx  DashboardSkeleton.tsx
src/app/prospectus/: loading.tsx  page.tsx
src/app/prospectus/[program]/: layout.tsx  page.tsx
src/app/prospectus/_actions/: download-prospectus.ts
src/app/resources/: layout.tsx  page.tsx
src/app/styles/: globals.css
src/app/wolfie/: layout.tsx  loading.tsx  page.tsx
src/components/HomePage/: HomePageFeatures.tsx  HomePageFooter.tsx  HomePageHeader.tsx  HomePageHeroSection.tsx
src/components/Sidebar/: SidebarLayout.tsx
src/components/ui/: loader.tsx
(+10 files in other folders)
