[project]
name = "rag"
version = "0.1.0"
description = "RAG System API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI stack
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.3.5",

    # LangChain stack (includes Google AI SDK)
    "langchain>=0.3.7",
    "langchain-google-genai>=2.0.4,<3.0.0",
    "langchain-postgres>=0.0.12",

    # Document processing
    "docling>=2.8.1",
]
