[project]
name = "rag"
version = "0.1.0"
description = "RAG System API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.3.5",
    "langchain>=0.3.7",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "ollama>=0.3.0",
    "langchain-postgres>=0.0.12",
    "pypdf>=6.4.0",
    "docx2txt>=0.9",
    "unstructured>=0.18.0",
    "python-magic>=0.4.27",
    "watchdog>=6.0",
]
